--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,26 @@
 body {
-  background-color: blanchedalmond;
+  background: #6190e8; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #a7bfe8,
+    #6190e8
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #a7bfe8,
+    #6190e8
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  height: 100vh;
 }
+/*#91eae4, #86a8e7, #7f7fd5 */
 .addPaper {
   padding: 10px;
+}
+
+.detailsHeader {
+  color: white;
+  font-size: 1.3rem;
 }
